<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_section_default"
        android:entries="@array/settings_order_by_section_labels"
        android:entryValues="@array/settings_order_by_section_labels"
        android:key="@string/settings_order_by_section_key"
        android:title="@string/settings_order_by_section_label"/>

    <EditTextPreference
        android:defaultValue="@string/number_of_articles_default"
        android:inputType="numberDecimal"
        android:key="@string/number_of_articles_key"
        android:maxLength="2"
        android:numeric="integer"
        android:selectAllOnFocus="true"
        android:title="@string/number_of_articles_label"
        android:visibility="visible"/>

</PreferenceScreen>