<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_news_list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="#BCAAA4"
    tools:context=".NewsActivity">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article_category"
                style="@style/category_style"
                tools:text="@string/article_category_item" />

            <TextView
                android:id="@+id/article_title"
                style="@style/title_style"
                tools:text="@string/article_title_item" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/article_author"
                    android:layout_weight="2"
                    style="@style/author_style"
                    tools:text="@string/article_author_item" />

                <TextView
                    android:id="@+id/article_date"
                    android:layout_weight="3"
                    android:gravity="end"
                    style="@style/author_style"
                    tools:text="@string/article_date_item" />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>